# event-studies

./: .gitignore  LICENSE  README.md  environment.yml  setup.cfg
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
src/event_studies/: __init__.py
src/event_studies/models/: __init__.py  linear_models.py
src/event_studies/models/finance/: __init__.py  market_model.py  tests.py
