[metadata]
name = event-studies
version = 0.1.3
author = Nicolás Agustín Rodriguez Castro
author_email = nicorodc@gmail.com
description = Useful code to conduct event studies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/taurusongithub/event-studies
project_urls =
    Bug Tracker = https://github.com/taurusongithub/event-studies/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas>=1.0.0
python_requires = >=3

[options.packages.find]
where = src